--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-miningcompany",
   "version": "0.0.0",
   "description": "Text mining.",
-  "main": "index.js",
+  "main": "./lib/miningcompany",
   "scripts": {
     "test": "gulp"
   },
@@ -34,5 +34,10 @@
     "istanbul": "^0.3.2",
     "jshint-stylish": "^1.0.0",
     "mocha": "^1.21.5"
+  },
+  "dependencies": {
+    "goldwasher": "^0.1.2",
+    "krawler": "^0.3.3",
+    "underscore": "^1.7.0"
   }
 }
