--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/alexlangberg/node-miningcompany",
   "devDependencies": {
+    "better-console": "^0.2.3",
     "chai": "^1.9.2",
     "chai-things": "^0.2.0",
     "coveralls": "^2.11.2",
