--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "gulp-spawn-mocha": "^0.4.1",
     "istanbul": "^0.3.2",
     "jshint-stylish": "^1.0.0",
-    "mocha": "^1.21.5"
+    "mocha": "^1.21.5",
+    "sinon": "^1.10.3",
+    "sinon-chai": "^2.6.0"
   },
   "dependencies": {
     "goldwasher": "^0.1.2",
