--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "gulp-batch": "^1.0.1",
     "gulp-coveralls": "^0.1.3",
     "gulp-istanbul": "^0.3.1",
+    "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.8.5",
     "gulp-mocha": "^1.1.1",
     "gulp-spawn-mocha": "^0.4.1",
     "istanbul": "^0.3.2",
     "jshint-stylish": "^1.0.0",
     "mocha": "^1.21.5",
+    "q": "^1.0.1",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.6.0"
   },
