--- a/package.json
+++ b/package.json
@@ -21,29 +21,29 @@
   },
   "homepage": "https://github.com/alexlangberg/node-miningcompany",
   "devDependencies": {
-    "better-console": "^0.2.3",
-    "chai": "^1.9.2",
+    "better-console": "^0.2.4",
+    "chai": "^2.3.0",
     "chai-things": "^0.2.0",
     "coveralls": "^2.11.2",
-    "gulp": "^3.8.8",
-    "gulp-batch": "^1.0.1",
-    "gulp-coveralls": "^0.1.3",
-    "gulp-istanbul": "^0.3.1",
+    "gulp-batch": "^1.0.5",
+    "gulp-coveralls": "^0.1.4",
+    "gulp-istanbul": "^0.9.0",
     "gulp-jsdoc": "^0.1.4",
-    "gulp-jshint": "^1.8.5",
-    "gulp-mocha": "^1.1.1",
-    "gulp-spawn-mocha": "^0.5.1",
-    "istanbul": "^0.3.2",
-    "jshint-stylish": "^1.0.0",
-    "mocha": "^2.0.1",
-    "q": "^1.0.1",
-    "sinon": "^1.10.3",
-    "sinon-chai": "^2.6.0"
+    "gulp-jshint": "^1.10.0",
+    "gulp-mocha": "^2.0.1",
+    "gulp-spawn-mocha": "^2.0.1",
+    "istanbul": "^0.3.13",
+    "jshint-stylish": "^1.0.2",
+    "mocha": "^2.2.4",
+    "q": "^1.3.0",
+    "sinon": "^1.14.1",
+    "sinon-chai": "^2.7.0"
   },
   "dependencies": {
     "goldwasher": "^2.0.3",
     "krawler": "^0.3.3",
     "node-schedule": "^0.1.13",
-    "underscore": "^1.7.0"
+    "ramda": "^0.13.0",
+    "underscore": "^1.8.3"
   }
 }
