--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
     "istanbul": "^0.3.13",
     "jshint-stylish": "^1.0.2",
     "mocha": "^2.2.4",
-    "q": "^1.3.0",
     "sinon": "^1.14.1",
     "sinon-chai": "^2.7.0"
   },
   "dependencies": {
-    "goldwasher": "^2.0.3",
+    "cheerio": "^0.19.0",
     "krawler": "^0.3.3",
     "node-schedule": "^0.1.13",
+    "node-uuid": "^1.4.3",
     "ramda": "^0.13.0",
-    "underscore": "^1.8.3"
+    "underscore.string": "^3.0.3"
   }
 }
