Small fixes in readme and gulp for testing.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "^2.3.0",
     "chai-things": "^0.2.0",
     "coveralls": "^2.11.2",
+    "gulp": "^3.8.11",
     "gulp-batch": "^1.0.5",
     "gulp-coveralls": "^0.1.4",
     "gulp-istanbul": "^0.9.0",
